# docling-vlm2md

./: .gitignore  LICENSE  README.md  example_config.yaml  main.py  main_parallel.py  pyproject.toml
src/: vlm_enrichment_pipeline.py  vlm_enrichment_pipeline_options.py  vlm_enrichment_pipeline_word.py
src/enrichment_models/: formula_enrichment_model.py  formula_enrichment_model_word.py  pic_enrichment_model.py  table_enrichment_model.py
src/prompt/: VLM_prompt.py  formula_recognition_prompt.py  llm_formula_enrichment_prompt.py
test/: test.docx  test_word.md
